# mango-option

./: .bazelignore  .bazelrc  .gitignore  ACT_USAGE.md  BUILD.bazel  CLAUDE.md  CODE_REVIEW_BATCH_VECTORIZATION.md  CONAN_SETUP.md  CONTEXT.md  Cargo.toml  Earthfile  LICENSE  MEMORY_UNIFICATION_STATUS.md  MODULE.bazel  Makefile  README.make.md  README.md  README.md.backup  RUST_REFACTOR_FEASIBILITY.md  TRACING.md  TRACING_QUICKSTART.md  VALIDATION.txt  WORKSPACE  annotated.txt  bazel-bin  bazel-iv_calc  bazel-out  bazel-testlogs  benchmark_results.txt  cachegrind.out  clean_test.cc  conanfile.txt  debug_interpolator.cc  debug_test.cc  debug_version.cc  deep_itm_issue.md  exact_test.cc  example_fat_binary_demo  example_fat_binary_demo.cc  issue_body.md  (+9 more)
apps/iv_surface/: README.md  pyproject.toml
benchmarks/: BENCHMARK_RESULTS.md  BUILD.bazel  README.md  README_MARKET_IV_E2E.md  RESULTS_SUMMARY.md  accuracy_comparison.cc  american_iv_benchmark.cc  batch_benchmark.cc  batch_profiling_benchmark.cc  batch_vs_openmp_benchmark.cc  boundary_detector.hpp  bspline_banded_solver_benchmark.cc  bspline_cache_locality.cc  bspline_fitter_hardcoded_vs_template.cc  bspline_move_semantics_demo.cc  bspline_nd_optimization_bench.cc  bspline_template_vs_hardcoded.cc  bump_blend.hpp  chebyshev_3d_div_inner.hpp  chebyshev_4d_eep_inner.hpp  chebyshev_4d_incremental_builder.hpp  chebyshev_div_eep_inner.hpp  chebyshev_eep_inner.hpp  chebyshev_quick_test.cc  chebyshev_segmented_comparison.cc  chebyshev_vs_bspline.cc  component_performance.cc  cubic_spline_template_vs_hardcoded.cc  debug_vanilla_iv.cc  golden_surface_comparison.cc  golden_surface_data.inc  greek_latency.cc  grid_spacing_accuracy.cc  grid_sweep.cc  interp_iv_safety.cc  interpolation_benchmark.cc  interpolation_greek_accuracy.cc  iv_benchmark_common.hpp  iv_benchmark_ql.hpp  iv_fdm_sweep.cc  (+18 more)
common/: BUILD.bazel  ivcalc_trace.h
crates/mango-option/: BUILD.bazel  Cargo.toml
crates/mango-option-sys/: BUILD.bazel  Cargo.toml
examples/: BUILD.bazel  debug_deep_itm.cc  debug_deep_itm_iv.cc  debug_pdas.cc  example_american_option.c  example_american_option_dividend.c  example_american_option_pricing.cc  example_batch_pricing.cc  example_custom_grid.cc  example_expected_validation.cpp  example_greeks_calculation.cc  example_heat_equation.c  example_implied_volatility.c  example_interpolation_engine.c  example_iv_solver_fdm.cc  example_memory_unification.cpp  example_multi_sinh_grid.cc  example_newton_solver.cc  example_table_storage.cpp  simple_databento_example.cpp  simple_yfinance_example.cpp  test_cache_example.cpp  test_cubic_4d_5d.c
kokkos/benchmarks/: BUILD.bazel  comparison_benchmark.cc
kokkos/src/: BUILD.bazel
kokkos/tests/: BUILD.bazel  american_option_accuracy_test.cc  american_option_test.cc  batch_solver_test.cc  black_scholes_test.cc  bspline_basis_test.cc  bspline_nd_test.cc  grid_comprehensive_test.cc  grid_test.cc  iv_solver_fdm_test.cc  iv_solver_interpolated_test.cc  pde_solver_test.cc  price_table_integration_test.cc  price_table_test.cc  pricing_pipeline_test.cc  root_finding_test.cc  thomas_solver_test.cc  workspace_test.cc
legacy/benchmarks/: BUILD.bazel  RESULTS_SUMMARY.md  accuracy_comparison.cc  cache_benchmark.cc  gamma_accuracy.cc  precompute_vs_fdm_benchmark.cc  vega_accuracy.cc  vega_interpolation_benchmark.cc
legacy/common/: BUILD.bazel  cubic_spline.c
legacy/examples/: BUILD.bazel  example_american_option.c  example_heat_equation.c  example_precompute_table.c  test_iv_accuracy.cc
legacy/src/: BUILD.bazel  american_option.c  brent.h  cubic_spline.c  grid_generation.h  grid_presets.h  (+9 more)
python/: BUILD.bazel  mango_bindings.cpp  test_bindings.py  test_bindings_simple.cpp  test_solver_memory_arena_api.py
scripts/: README.md  analyze_option_chain.py  download_benchmark_data.py  download_iv_surface.py  fetch_cboe_data.py  ivcalc-trace  pyproject.toml  requirements.txt  run_cachegrind_test.sh
src/: BUILD.bazel  aligned_allocator.hpp  aligned_memory_resource.hpp  american_option.c  american_option.cpp  american_option.h  american_option.hpp  banded_lu_solver.hpp  brent.h  brent.hpp  bspline_4d.hpp  bspline_basis_1d.hpp  bspline_collocation_1d.hpp  bspline_fitter_4d.hpp  bspline_fitter_4d_separable.hpp  bspline_utils.hpp  cache_config.hpp  cubic_spline.c  cubic_spline.h  cubic_spline_solver.hpp  eigen_banded_solver.hpp  error_types.hpp  european_option.c  european_option.h  expected.hpp  grid.hpp  grid_generation.c  grid_presets.c  grid_transform.c  grid_transform.h  implied_volatility.c  implied_volatility.h  interp_cubic.c  interp_cubic.h  interp_cubic_workspace.c  interp_multilinear.c  interp_multilinear.h  interp_strategy.h  interpolation_table_storage_v2.cpp  interpolation_table_storage_v2.hpp  (+36 more)
tests/: BENCHMARK.md  BUILD.bazel  CACHEGRIND.md  CONTRACT_CHAIN_BENCHMARK.md  OPENMP_SCALING_RESULTS.md  QUANTLIB_VALIDATION_README.md  adaptive_accuracy_test.cc  adaptive_grid_builder_integration_test.cc  adaptive_grid_builder_test.cc  adaptive_grid_types_test.cc  aligned_allocator_test.cc  aligned_arena_test.cc  american_obstacle_test.cc  american_option_auto_api_test.cc  american_option_batch_test.cc  american_option_batch_workspace_test.cc  american_option_custom_ic_test.cc  american_option_expected_validation_test.cc  american_option_gamma_oscillation_test.cc  american_option_new_api_test.cc  american_option_result_test.cc  american_option_solver_test.cc  american_option_test.cc  american_pde_workspace_test.cc  american_price_surface_test.cc  american_solver_workspace_test.cc  american_solver_workspace_test.cc.disabled  banded_lu_test.cc  banded_matrix_mdspan_test.cc  batch_activation_verification.cc  batch_benchmark.cc  batch_bracketing_test.cc  batch_convergence_test.cc  batch_solver_custom_grid_test.cc  batch_solver_fuzz_test.cc  batch_transpose_benchmark.cc  batch_transpose_test.cc  black_scholes_analytics_test.cc  black_scholes_operator_test.cc  black_scholes_pde_rate_fn_test.cc  (+231 more)
toolchain/: BUILD.bazel  cc_toolchain_config.bzl  cc_toolchain_config_clang.bzl  cc_toolchain_config_fuzz.bzl
(+855 files in other folders)
