load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")

# Combined library target that exports all public APIs
cc_library(
    name = "mango_option",
    visibility = ["//visibility:public"],
    deps = [
        # Core option pricing
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/option:iv_solver_fdm",
        "//src/option:iv_solver_interpolated",
        "//src/option:option_spec",
        # Price tables
        "//src/option/table:price_table_builder",
        "//src/option/table:price_table_surface",
        "//src/option/table:price_table_axes",
        # Data source integration (mango::simple namespace)
        "//src/simple",
        # Supporting utilities
        "//src/support:error_types",
        "//src/pde/core:grid",
        "//src/pde/core:time_domain",
        "//src/math:yield_curve",
    ],
)

# Collect headers with proper directory structure
pkg_files(
    name = "headers_option",
    srcs = ["//src/option:public_headers"],
    prefix = "mango/option",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_option_table",
    srcs = ["//src/option/table:public_headers"],
    prefix = "mango/option/table",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_pde_core",
    srcs = ["//src/pde/core:public_headers"],
    prefix = "mango/pde/core",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_pde_operators",
    srcs = ["//src/pde/operators:public_headers"],
    prefix = "mango/pde/operators",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_math",
    srcs = ["//src/math:public_headers"],
    prefix = "mango/math",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_support",
    srcs = ["//src/support:public_headers"],
    prefix = "mango/support",
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "headers_simple",
    srcs = ["//src/simple:public_headers"],
    prefix = "mango/simple",
    strip_prefix = strip_prefix.files_only(),
)

# pkg-config file
genrule(
    name = "mango_option_pc",
    outs = ["mango-option.pc"],
    cmd = """
cat > $@ << 'EOF'
prefix=@PREFIX@
exec_prefix=$${prefix}
libdir=$${exec_prefix}/lib
includedir=$${prefix}/include

Name: mango-option
Description: C++23 American option pricing library with FDM solvers and B-spline interpolation
Version: 0.1.0
Requires:
Libs: -L$${libdir} -lmango_option -llapacke -fopenmp
Cflags: -I$${includedir} -std=c++23
EOF
""",
    visibility = ["//visibility:public"],
)

# Header tarball
pkg_tar(
    name = "mango_option_headers",
    srcs = [
        ":headers_math",
        ":headers_option",
        ":headers_option_table",
        ":headers_pde_core",
        ":headers_pde_operators",
        ":headers_simple",
        ":headers_support",
    ],
    extension = "tar.gz",
    package_dir = "include",
    visibility = ["//visibility:public"],
)

# pkg-config tarball
pkg_tar(
    name = "mango_option_pkgconfig",
    srcs = [":mango_option_pc"],
    extension = "tar.gz",
    package_dir = "lib/pkgconfig",
    visibility = ["//visibility:public"],
)

# Full distribution tarball (headers + pkg-config)
pkg_tar(
    name = "mango_option_dist",
    extension = "tar.gz",
    visibility = ["//visibility:public"],
    deps = [
        ":mango_option_headers",
        ":mango_option_pkgconfig",
    ],
)
