# This is a MODULE.bazel file

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "rules_python", version = "0.34.0")

# Python configuration - allow running as root for CI/Docker environments
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_11")

# Apache Arrow C++ (optional, requires Conan build)
# Uncomment the following lines to enable Arrow IPC persistence features
# See CONAN_SETUP.md for installation instructions
#
# conan_extension = use_extension("//conan_deps:conan_deps_module_extension.bzl", "conan_extension")
# use_repo(
#     conan_extension,
#     "arrow",
#     "boost",
#     "bzip2",
#     "libbacktrace",
#     "zlib",
# )
