# This is a MODULE.bazel file

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")

# FuzzTest for property-based fuzz testing
# NOTE: Requires Earthly container with Clang + libc++ due to ABI issues:
# - GCC 14: FuzzTest dependencies fail with -Werror
# - Clang + libstdc++: std::span ODR violations
# Run fuzz tests via: earthly +fuzz-test
bazel_dep(name = "fuzztest", version = "20241028.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "0.0.11")

# Register C++ toolchain with C++23 support
register_toolchains("//toolchain:cc_toolchain_for_k8")

# Python configuration - allow running as root for CI/Docker environments
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_11")

# Non-BCR dependencies (mdspan, etc.)
non_bcr_deps = use_extension("//:deps.bzl", "non_bcr_deps")
use_repo(non_bcr_deps, "mdspan")

# Apache Arrow C++ (required for price table persistence)
# NOTE: Using system-installed Arrow packages in CI (libarrow-dev)
# For local development, run: ./tools/enable_arrow.sh
# See CONAN_SETUP.MD for details
# conan_extension = use_extension("//conan_deps:conan_deps_module_extension.bzl", "conan_extension")
# use_repo(
#     conan_extension,
#     "arrow",
#     "boost",
#     "bzip2",
#     "libbacktrace",
#     "zlib",
# )
