# C++20 Benchmarks
#
# Modern C++ benchmarks for performance testing and comparison.
# All targets are marked as "manual" - they won't build in `bazel test //...`
#
# To run benchmarks:
#   bazel run //benchmarks:component_performance
#   bazel run //benchmarks:quantlib_performance
#   bazel run //benchmarks:quantlib_accuracy
#
# Component performance: Individual component timings (IV, American option)
# QuantLib performance: Head-to-head speed comparison
# QuantLib accuracy: Numerical accuracy validation

cc_binary(
    name = "component_performance",
    srcs = ["component_performance.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
    ],
    linkopts = [
        "-fopenmp",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "//src/option:american_solver_workspace",
        "//src/option:iv_solver_fdm",
        "//src/option:option_spec",
        "//src/interpolation:bspline_4d",
        "//src/interpolation:bspline_fitter_4d",
        "//src/option:iv_solver_interpolated",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "readme_benchmarks",
    srcs = ["readme_benchmarks.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver",
        "//src/option:iv_solver_interpolated",
        "//src/option:normalized_chain_solver",
        "//src/interpolation:bspline_4d",
        "//src/interpolation:bspline_fitter_4d",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "quantlib_performance",
    srcs = ["quantlib_performance.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-lQuantLib",
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "quantlib_accuracy",
    srcs = ["quantlib_accuracy.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-lQuantLib",
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "//src/option:normalized_chain_solver",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_cache_locality",
    srcs = ["bspline_cache_locality.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
    ],
    linkstatic = True,
    deps = [
        "//src/interpolation:bspline_fitter_4d",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "iv_interpolation_profile",
    srcs = ["iv_interpolation_profile.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/interpolation:bspline_4d",
        "//src/interpolation:bspline_fitter_4d",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "market_iv_e2e_benchmark",
    srcs = ["market_iv_e2e_benchmark.cc"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/option:price_table_4d_builder",
        "//src/option:iv_solver_interpolated",
        "//src/interpolation:bspline_4d",
        "//src/interpolation:bspline_fitter_4d",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)
