# C++20 Benchmarks
#
# Modern C++ benchmarks for performance testing and comparison.
# All targets are marked as "manual" - they won't build in `bazel test //...`
#
# To run benchmarks:
#   bazel run //benchmarks:component_performance
#   bazel run //benchmarks:quantlib_performance
#   bazel run //benchmarks:quantlib_accuracy
#
# Component performance: Individual component timings (IV, American option)
# QuantLib performance: Head-to-head speed comparison
# QuantLib accuracy: Numerical accuracy validation

cc_binary(
    name = "component_performance",
    srcs = ["component_performance.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
    ],
    linkopts = [
        "-fopenmp",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver_fdm",
        "//src/option:option_spec",
        "//src/option:bspline_price_table",
        "//src/math:bspline_nd_separable",
        "//src/option:iv_solver_interpolated",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "readme_benchmarks",
    srcs = ["readme_benchmarks.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/option:iv_solver_fdm",
        "//src/option:iv_solver_interpolated",
        "//src/option:bspline_price_table",
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "quantlib_performance",
    srcs = ["quantlib_performance.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-lQuantLib",
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "quantlib_accuracy",
    srcs = ["quantlib_accuracy.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-lQuantLib",
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,  # Static link our library code
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_cache_locality",
    srcs = ["bspline_cache_locality.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
    ],
    linkstatic = True,
    deps = [
        "//src/math:bspline_nd_separable",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "iv_interpolation_profile",
    srcs = ["iv_interpolation_profile.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/option:bspline_price_table",
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "market_iv_e2e_benchmark",
    srcs = ["market_iv_e2e_benchmark.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
        "-flto",
    ],
    linkopts = [
        "-fopenmp",
        "-flto",
    ],
    linkstatic = True,
    deps = [
        "//src/option:price_table_builder",
        "//src/option:price_table_surface",
        "//src/option:iv_solver_interpolated",
        "//src/option:bspline_price_table",
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "openmp_simd_benchmark",
    srcs = ["openmp_simd_benchmark.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp-simd",
    ],
    linkstatic = True,
    deps = [
        "//src/pde/core:grid",
        "//src/pde/operators:centered_difference_scalar",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_template_vs_hardcoded",
    srcs = ["bspline_template_vs_hardcoded.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    linkstatic = True,
    deps = [
        "//src/option:bspline_price_table",
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_fitter_hardcoded_vs_template",
    srcs = ["bspline_fitter_hardcoded_vs_template.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    linkstatic = True,
    deps = [
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "cubic_spline_template_vs_hardcoded",
    srcs = ["cubic_spline_template_vs_hardcoded.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    linkstatic = True,
    deps = [
        "//src/math:cubic_spline_solver",
        "//src/math:cubic_spline_nd",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_nd_optimization_bench",
    srcs = ["bspline_nd_optimization_bench.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    linkstatic = True,
    deps = [
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark_main",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "bspline_move_semantics_demo",
    srcs = ["bspline_move_semantics_demo.cc"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    linkstatic = True,
    deps = [
        "//src/math:bspline_nd_separable",
        "@google_benchmark//:benchmark_main",
    ],
    tags = ["benchmark", "manual"],
)
