# Common utilities shared between modern C++ and legacy C implementations
# Both //src/... and //legacy/... can depend on //common/...

# Header-only library for USDT tracing (usable from both C and C++)
cc_library(
    name = "ivcalc_trace_hdr",
    hdrs = ["ivcalc_trace.h"],
    copts = ["-DHAVE_SYSTEMTAP_SDT"],
    visibility = ["//visibility:public"],
)
