cc_binary(
    name = "example_american_option_pricing",
    srcs = ["example_american_option_pricing.cc"],
    deps = [
        "//src/option:american_option",
    ],
)

# cc_binary(
#     name = "example_iv_solver_fdm",
#     srcs = ["example_iv_solver_fdm.cc"],
#     deps = [
#         "//src/option:iv_solver_fdm",
#     ],
# )

cc_binary(
    name = "example_batch_pricing",
    srcs = ["example_batch_pricing.cc"],
    deps = [
        "//src/option:american_option",
    ],
)

cc_binary(
    name = "example_greeks_calculation",
    srcs = ["example_greeks_calculation.cc"],
    deps = [
        "//src/option:american_option",
    ],
)

cc_binary(
    name = "example_custom_grid",
    srcs = ["example_custom_grid.cc"],
    deps = [
        "//src/option:american_option",
        "//src/pde/core:grid",
    ],
)

cc_binary(
    name = "example_expected_validation",
    srcs = ["example_expected_validation.cpp"],
    deps = [
        "//src/option:american_option",
    ],
)

cc_binary(
    name = "example_multi_sinh_grid",
    srcs = ["example_multi_sinh_grid.cc"],
    deps = [
        "//src/pde/core:grid",
    ],
)

# Debug/investigation examples (not for general use)
cc_binary(
    name = "debug_deep_itm",
    srcs = ["debug_deep_itm.cc"],
    deps = [
        "//src/option:american_option",
    ],
)

cc_binary(
    name = "debug_deep_itm_iv",
    srcs = ["debug_deep_itm_iv.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver_fdm",
    ],
)
