load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "mango_iv",
    srcs = ["mango_bindings.cpp"],
    deps = [
        "//src/option:iv_solver",
        "//src/option:american_option",
        "//src/pde/core:root_finding",
        "//src/option:iv_types",
        "//src/support:error_types",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)
