load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "mango_iv",
    srcs = ["mango_bindings.cpp"],
    deps = [
        "//src/option:iv_solver_fdm",
        "//src/option:american_option",
        "//src/math:root_finding",
        "//src/option:iv_types",
        "//src/support:error_types",
        "//src/support/memory:solver_memory_arena",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "test_bindings_simple",
    srcs = ["test_bindings_simple.cpp"],
    deps = [
        "//src/support/memory:solver_memory_arena",
        "//common:ivcalc_trace_hdr",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O2",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    visibility = ["//visibility:private"],
)
