load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "mango_iv",
    srcs = ["mango_bindings.cpp"],
    deps = [
        "//src/option:iv_solver_fdm",
        "//src/option:american_option",
        "//src/math:root_finding",
        "//src/support:error_types",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)
